feat(colors): Replaced green with army green

--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -13,7 +13,7 @@ $c-background:      #0C0B1D;
 $c-text:            #ffffff;
 $c-confirm-button:  #5400FF;
 
-$c-green: #C4FF88;
+$c-green: #0FC15A;
 $c-red: #FF1958;
 $c-light-purple: #5400FF;
 $c-pink: #FF009C;
