feat(market): Show all tabs for desktop

--- a/src/containers/TabbedViews/TabbedViews.module.scss
+++ b/src/containers/TabbedViews/TabbedViews.module.scss
@@ -1,3 +1,12 @@
+@import "../../styles/helpers/variables";
+@import "../../styles/helpers/mixins";
+
 .tabs {
     margin-bottom: 0.7813rem;
+}
+
+.tab {
+    @include for-size($default-bigger-screen-breakpoint) {
+        min-width: 0;
+    }
 }
