--- a/src/containers/MarketHeader/MarketHeader.module.scss
+++ b/src/containers/MarketHeader/MarketHeader.module.scss
@@ -31,7 +31,7 @@
     font-weight: 400;
     font-size: 1.5625rem;
     line-height: 1.8125rem;
-    margin: 0 0 0.375rem;
+    margin: 0 0.2rem 0.375rem;
 
     @include for-size($default-bigger-screen-breakpoint) {
         font-size: 1.875rem;
