WIP: Wrapping NEAR & added token symbol instead of dollar symbol

--- a/src/compositions/Dialog/Dialog.module.scss
+++ b/src/compositions/Dialog/Dialog.module.scss
@@ -4,6 +4,14 @@
     margin: 0.625rem;
 }
 
+.title {
+    color: var(--c-text);
+}
+
+.content {
+    color: var(--c-text);
+}
+
 .cancelButton {
     background-color: transparent;
 }
