--- a/src/containers/TokenSelect/TokenSelect.module.scss
+++ b/src/containers/TokenSelect/TokenSelect.module.scss
@@ -25,6 +25,7 @@
     &__inputs-info {
         display: flex;
         align-items: center;
+        width: 100%;
     }
 
     &__token-name {
@@ -38,6 +39,7 @@
         color: var(--c-text);
         border: none;
         font-size: 1.25rem;
+        width: 100%;
 
         &::-moz-placeholder {
             text-align: center;
@@ -55,4 +57,12 @@
 
 .priceSymbol {
     margin: 0 0.1rem;
+}
+
+.changePairButton {
+    border-radius: 0.5rem;
+    border: 1px solid var(--c-tertiary) !important;
+    padding: 0.25rem;
+    text-decoration: none !important;
+    white-space: nowrap;
 }
