--- a/src/components/Tag/Tag.module.scss
+++ b/src/components/Tag/Tag.module.scss
@@ -13,6 +13,10 @@
 
     &--active {
         background-color: var(--c-primary);
+
+        &:hover {
+            background-color: var(--c-primary);
+        }
     }
 }
 
