--- a/src/components/Overview/Overview.module.scss
+++ b/src/components/Overview/Overview.module.scss
@@ -1,8 +1,13 @@
-.swap-overview {
+.overview {
     border: 1px solid rgba(var(--c-white-rgb), .5);
     background-color: var(--c-primary-dark);
     border-radius: 0.75rem;
     padding: 0.6875rem;
+
+    &__container {
+        margin-bottom: 1.25rem;
+        margin-top: 1.25rem;
+    }
 
     &__info-row {
         display: flex;
