--- a/src/components/DateTimePicker/DateTimePicker.module.scss
+++ b/src/components/DateTimePicker/DateTimePicker.module.scss
@@ -1,5 +1,4 @@
 .root {
-    background-color: var(--c-primary-dark);
     width: 100%;
 
     input {
@@ -8,5 +7,14 @@
 
     fieldset {
         border-color: var(--c-text);
+    }
+
+    :global(.MuiInputBase-root) {
+        background-color: var(--c-primary-dark);
+    }
+
+    :global(.MuiFormHelperText-root) {
+        font-weight: bold;
+        color: var(--c-text);
     }
 }
