--- a/src/containers/TokenSwapper/TokenSwapper.module.scss
+++ b/src/containers/TokenSwapper/TokenSwapper.module.scss
@@ -12,9 +12,9 @@
     }
 
     &__switch-tokens {
-        position: absolute;
-        left: 48%;
-        margin-top: -1.25rem;
+        display: flex;
+        width: 100%;
+        justify-content: center;
     }
 }
 
@@ -38,4 +38,8 @@
 
 .noMargin {
     margin-bottom: 0;
+}
+
+.receiveInputs {
+    margin-top: -1.5rem;
 }
