feat(marketHeader): Only go back to the previous page when the user actively came from the overview or balances

--- a/src/containers/MarketHeader/MarketHeader.module.scss
+++ b/src/containers/MarketHeader/MarketHeader.module.scss
@@ -83,6 +83,7 @@
         background-color: var(--c-tertiary);
         color: var(--c-white);
         margin-bottom: 1rem;
+        padding: 0 1rem;
     }
 
     &__resolution-date-title {
